v0.3.0
* Editor can place enemies, characters, objects
* Editor can save levels
* Game can load saved levels
* Editor can load custom levels to edit
* Enemies defined by data
* Treasure chests and gold tracking
* Added skeleton enemy

v0.4.0
* Multiple characters on a map
* Better editor experience
* Objects/Characters defined by data
* Editor can save/load campaigns
* Ability to save/load single maps